--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="about-section-container-text col-md-12 col-lg-6" data-aos="fade-left">
                 <p>Somos un grupo de jóvenes emprendedores que está enfocado en mejorar y ayudar
-                    a los ciudadanos peruanos en el ámbito laboral. Donde Jo-Bag cumplirá el rol
+                    a los ciudadanos peruanos en el ámbito laboral. Donde CVExpress cumplirá el rol
                     de intermediario entre los empleadores y postulantes. Para asegurar la mejor experiencia
                     entre nuestros usuarios brindaremos una automatización en el proceso de selección.
                 </p>
