--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h1 class="">Nosotros</h1>
         <div class="row about-section-container container">
             <div class="about-section-container-img col-md-12 col-lg-6" data-aos="fade-right">
-                <img src="images/logo.jpg" alt="">
+                <img src="images/logo.png" alt="">
             </div>
             <div class="about-section-container-text col-md-12 col-lg-6" data-aos="fade-left">
                 <p>Somos un grupo de jóvenes emprendedores que está enfocado en mejorar y ayudar
